# rusty_trader

./: .gitignore  README.md  docker-compose.yml  up.sh
IB/: Dockerfile  (+2 more)
backend/: Cargo.toml  Dockerfile  README.md
backend/.cargo/: config.toml
backend/crud_insertable/: Cargo.toml
backend/crud_insertable/src/: lib.rs
backend/crud_models/: Cargo.toml
backend/crud_models/src/: lib.rs
backend/src/: crud.rs  crud_impl.rs  logs.rs  main.rs  models.rs  portfolio_values.rs
trading-app/: Cargo.toml  Dockerfile  Dockerfile.test  README.md  entrypoint.sh
trading-app-old/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  setup.cfg
trading-app-old/IBCMacos-3.20.0/: twsstartmacos.sh
trading-app-old/IBCMacos-3.20.0/logs/: ibc-3.20.0_TWS-10.19_Monday.txt  (+1 more)
trading-app-old/app/: .env  config.py  create_app.py  extensions.py  models.py  models_types.py  models_types_generator.py  run.py
trading-app-old/tests/: test_base_CRUD.py
trading-app/.sqlx/: query-001a9fc66f30e12adc372274178715712e2e55e023dd1300078a966621bfb0b5.json  query-019b77427babb5e8fc8d11b76dfefa8b4ce11d90fc4502c0f45dfca82741adf0.json  query-2c74ed14cb91963c3d9475b3828b951ed2e5933ad233dd1dbdb42a1466402653.json  query-336d0a9069cc8b9b6ac525c28e2531446c53668b1eefa70741f8028fe7bad3b1.json  query-34d3791f2fdea5b06530815635e7a4c58510e23c7aa8ab6549a1f60baac1b07d.json  query-419597b428028ceff89491e9fa3dcb44de7d24239588f51851dac22c8959cddd.json  query-4b5340a29b3fac877e5b1da3d8e1592c532ef513702429969160a00ac569f7ca.json  query-57dd17de165b5636ef400b4c2e7e28c152c1676973f6dd413b44a604ce0952d8.json  query-5c3adc71a32c03f057401036fa8319f8e1f8409548fbc2737c1102011b6faab1.json  query-5c6b18ac0deec3b759adc610d161f824235094653a8359214ebd10c578b3042b.json  query-62f574f4b21d9eca01b2951067568323aa876cfa03fc09b5bec4a9d4cf26d2f0.json  query-710a08febf9b7206b030b3d51afa6929569039baa095f6b468c284edf7138d3c.json  query-773573110dd31d1af57aea98e921569d56dd6c3febef5f78687fd57ad1d8f8ae.json  query-8584ffce0655040aa974fd200d92a56bdf761de831686c16981ab3126e3688b0.json  query-a03da070947724178d31b8638825c7571cc65938e8378a27a6d6c2d11b2c19a8.json  query-a9867de34c9a217df467833f611c137fde39018aa7bbc650efe1e2ccd438a196.json  query-adcb5d43d3a70c827d7c48a6775ef3fb1c52e4f640e471d78d2ebd0c1dcefc8e.json  query-ae26c45a9f567e1d5ece089e6e91da1c2fd2aa3452bc7bbb77d17d25a1c239e7.json  query-b4e8dc58675fa370f6d28e6b638ea380bac9b56ec9928c5a2212273a6c4b6d55.json  query-c13cee88ff09e461b6b4ffa17c0a8a53619aa60048ef8c0e150eb9d8884bc8bd.json  query-c2b1c97ddbc9e515bf0c4eeb4ebe4999f5e12ac90d891c2c77370bd88468150e.json  query-cd2bcdd98fac569a52fe4e2211c6799fdfb2c5dd45273e9f2a07d39cbc351f1e.json  query-e88f90fb372d68ca2a57ea7d970bb976ec0294c3b55c7af90dd7b0cf6c176fed.json  query-e9936143c0e489c4eb408e1aada13815f26b08f4867975fe9293c2a8a94d2e77.json  query-ee9077d11843aabb7e2b6685f352e343cc55df812cf37e13fcbffdf5b0ebac43.json  query-f282326f27bafcb35a596a978bdd04600e7a64861af3a6ad60c43fa7de7e1403.json  query-fc880cc9606bd426969fd48649a3af82c30c20c7738e322cc0c365ff63c8f56c.json
trading-app/crud_models/: Cargo.toml
trading-app/migrations/: 20250729035729_init.sql
trading-app/src/: ibc.rs  lib.rs  logger.rs  main.rs
trading-app/tests/: integration.rs  models.rs  test_order_tracking.rs
(+85 files in other folders)
