[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version="0.7", features=["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [ "postgres", "chrono", "runtime-tokio", "macros", "rust_decimal" ] }
anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
crud_models = { path = "crud_models" }
http = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
env_filter = "0.1.3"
futures = "0.3.31"
tower-http = { version="0.6.2", features = [ "cors" ] }
reqwest = { version="0.12.15", default-features = false, features = [ "rustls-tls" ] }
regex = "1.11.1"
bigdecimal = { version = "0.4.8", features = [ "serde-json" ] }
rust_decimal = { version = "1.37.2", features = [ "db-postgres", "db-tokio-postgres", "macros" ] }
crud_insertable = { version = "0.1.0", path = "crud_insertable" }
