[package]
name = "trading-app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = [ "serde", "clock" ]}
ibapi = "1.2.2"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = [ "postgres", "chrono", "runtime-tokio", "macros", "rust_decimal" ] }
crud_models = { path = "crud_models" }
crud_insertable = { path = "crud_insertable" }
serde_json = "1.0.141"
async-trait = "0.1.88"
anyhow = "1.0.98"
tokio = { version = "1.47.0", features = [ "macros", "rt-multi-thread", "sync", "time", "process", "io-util" ] }
tracing = { version = "0.1.41", features = [ "std" ] }
tracing-subscriber = { version = "0.3.19", features = [ "ansi", "env-filter" ] }
moka = { version = "0.12.10", features = [ "sync" ] }
chrono-tz = { version = "0.10.4" }
ordered-float = "5.0.0"
nyse-holiday-cal = "0.2.3"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = [ "json", "rustls-tls" ] }
futures = "0.3.31"
rand = "0.9.2"
tokio-postgres = { version = "0.7.13", features = [ "with-chrono-0_4" ] }
rust_decimal = { version = "1.37.2", features = [ "db-postgres", "db-tokio-postgres", "macros" ] }
csv = "1.3.1"
